[package]
edition = "2021"
name    = "plonky2_5"
version = "0.1.0"

[dependencies]
anyhow = { version = "1.0.40", default-features = false }
hashbrown = { version = "0.14.0", default-features = false, features = [
  "ahash",
  "serde",
] } # NOTE: When upgrading, see `ahash` dependency.
hex = "0.4.3"
itertools = "0.10.5"
log = "0.4.17"
num = { version = "0.4", features = ["rand"] }
num-derive = "0.3.3"
num-traits = "0.2.15"
once_cell = "1.16.0"
plonky2 = { git = "https://github.com/mir-protocol/plonky2", rev = "3de92d9ed1721cec133e4e1e1b3ec7facb756ccf", default-features = false, features = [
  "std",
  "gate_testing",
] }
plonky2_util = { git = "https://github.com/mir-protocol/plonky2", rev = "3de92d9ed1721cec133e4e1e1b3ec7facb756ccf", default-features = false }
rand = "0.8"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
serde_repr = "0.1.10"
serde_with = { version = "2.2.0", features = ["hex"] }
unroll = "0.1.5"

[dev-dependencies]
criterion   = "0.5.1"
hex-literal = "0.4.1"
rand_chacha = "0.3.1"

[features]
default = ["std"]
std     = ["anyhow/std", "rand/std"]

[profile.release]
debug     = true
opt-level = 3

[profile.bench]
opt-level = 3

[profile.test]
opt-level = 3
